include/openswmm/engine/openswmm_transport.h

/** @brief 1 if a transport.ard component is configured on the model. */
SWMM_ENGINE_API int swmm_transport_get_configured(SWMM_Engine engine,
                                                  int* configured);
/** @brief The dispersion mode (SWMM_TransportDispersionMode). */
SWMM_ENGINE_API int swmm_transport_get_dispersion_mode(SWMM_Engine engine,
                                                       int* mode);
/**
 * @brief Set the dispersion mode.
 * @details Setting VALUE without a coefficient leaves the previous
 *          coefficient in force — set both. Marks the config present.
 */
SWMM_ENGINE_API int swmm_transport_set_dispersion_mode(SWMM_Engine engine,
                                                       int mode);
/** @brief VALUE-mode coefficient, display units (ft²/s or m²/s). */
SWMM_ENGINE_API int swmm_transport_get_dispersion_value(SWMM_Engine engine,
                                                        double* value);
/** @brief Set the VALUE-mode coefficient (must be >= 0 and finite). */
SWMM_ENGINE_API int swmm_transport_set_dispersion_value(SWMM_Engine engine,
                                                        double value);
/** @brief `TARGET_DX`, display length units; 0 means engine default. */
SWMM_ENGINE_API int swmm_transport_get_target_dx(SWMM_Engine engine,
                                                 double* dx);
/** @brief Set `TARGET_DX` (must be >= 0 and finite; 0 restores default). */
SWMM_ENGINE_API int swmm_transport_set_target_dx(SWMM_Engine engine,
                                                 double dx);
/** @brief Number of per-conduit dispersion override rows. */
SWMM_ENGINE_API int swmm_transport_conduit_disp_count(SWMM_Engine engine,
                                                      int* count);
/** @brief Override row `index`: link index + coefficient (display units). */
SWMM_ENGINE_API int swmm_transport_get_conduit_disp(SWMM_Engine engine,
                                                    int index,
                                                    int* link_index,
                                                    double* value);
/** @brief Number of `[TRANSPORT_BOUNDARIES]` rows (raw, as configured). */
SWMM_ENGINE_API int swmm_transport_boundary_count(SWMM_Engine engine,
                                                  int* count);
/**
 * @brief Read boundary row `index`.
 * @param element   Node name buffer (may be NULL to skip).
 * @param elem_len  Its capacity, including the terminator.
 * @param species   Species name buffer (may be NULL).
 * @param spec_len  Its capacity.
 * @param is_ts     1 if TIMESERIES mode. The series name is returned in
 *                  `ts_name` when set; `value` is the VALUE-mode
 *                  concentration otherwise (species units).
 */
SWMM_ENGINE_API int swmm_transport_get_boundary(SWMM_Engine engine, int index,
                                                char* element, int elem_len,
                                                char* species, int spec_len,
                                                int* is_ts, double* value,
                                                char* ts_name, int ts_len);
/** @brief Number of `[TRANSPORT_SOURCES]` rows (raw, as configured). */
SWMM_ENGINE_API int swmm_transport_source_count(SWMM_Engine engine,
                                                int* count);
/**
 * @brief Read source row `index`. Same contract as the boundary reader;
 *        `value` is the VALUE-mode mass rate (species mass units per
 *        second; negative = extraction, D-NS1).
 */
SWMM_ENGINE_API int swmm_transport_get_source(SWMM_Engine engine, int index,
                                              char* element, int elem_len,
                                              char* species, int spec_len,
                                              int* is_ts, double* value,
                                              char* ts_name, int ts_len);